--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li class="nav-item">
             <a class="header-link link list" href="mailto:info@devstudio.com">
               <svg class="header-icon" width="16" height="12">
-                <use href="./images/icons.svg#mail"></use>
+                <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
@@ -344,43 +344,43 @@
           <ul class="list client-list">
             <li class="client-item">
               <a class="client-link list" href="#">
-                <svg class="client-icon" width="41" height="46.7">
-                  <use href="./images/icons.svg#ya-co"></use>
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-1"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link list" href="#">
-                <svg class="client-icon" width="40" height="52">
-                  <use href="./images/icons.svg#tagline-here"></use>
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-2"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link list" href="#">
-                <svg class="client-icon" width="43.46" height="41.18">
-                  <use href="./images/icons.svg#company"></use>
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-3"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link list" href="#">
-                <svg class="client-icon" width="84.44" height="40.62">
-                  <use href="./images/icons.svg#foster-peters"></use>
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-4"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link list" href="#">
-                <svg class="client-icon" width="62.54" height="45.43">
-                  <use href="./images/icons.svg#brand"></use>
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-5"></use>
                 </svg>
               </a>
             </li>
             <li class="client-item">
               <a class="client-link list" href="#">
-                <svg class="client-icon" width="93.79" height="43.93">
-                  <use href="./images/icons.svg#tagline"></use>
+                <svg class="client-icon" width="106" height="60">
+                  <use href="./images/icons.svg#client-6"></use>
                 </svg>
               </a>
             </li>
