--- a/portfolio.html
+++ b/portfolio.html
@@ -46,7 +46,7 @@
           <li class="nav-item">
             <a class="header-link link list" href="mailto:info@devstudio.com">
               <svg class="header-icon" width="16" height="12">
-                <use href="./images/icons.svg#mail"></use>
+                <use href="./images/icons.svg#envelope"></use>
               </svg>
               info@devstudio.com
             </a>
